--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -2,3 +2,14 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-header-cell {
+    flex-direction: column;
+    text-align: center !important;
+    justify-content: center ;
+}
+
+.mat-cell {
+    text-align: center;
+    justify-content:center;
+}
